deployments/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: niche-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche-ingress
spec:
  hosts:
  - "*"
  gateways:
  - niche-gateway
  http:
    - route:
      - destination:
          host: niche-web
          subset: v1
          port:
            number: 8080
